--- a/css/app.css
+++ b/css/app.css
@@ -7680,21 +7680,21 @@ em {
 
 .bar-content {
   border-color: transparent;
-  background-color: #f70;
+  background-color: #30ADD1;
   background-image: linear-gradient(0deg, transparent, transparent 50%, transparent 50%);
   color: #fff; }
   .bar-content .title {
     color: #fff; }
   .bar-content .button {
     border-color: transparent;
-    background-color: #f70;
+    background-color: #30ADD1;
     color: #fff; }
     .bar-content .button:hover {
       color: #fff;
       text-decoration: none; }
     .bar-content .button.active, .bar-content .button.activated {
       border-color: transparent;
-      background-color: #f70;
+      background-color: #30ADD1;
       box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); }
     .bar-content .button.button-clear {
       border-color: transparent;
@@ -7708,7 +7708,7 @@ em {
 
 .bar-side-menu {
   border-color: transparent;
-  background-color: #f70;
+  background-color: #30ADD1;
   background-image: linear-gradient(0deg, transparent, transparent 50%, transparent 50%);
   color: #fff;
   height: 80px !important; }
@@ -7779,21 +7779,3 @@ em {
   border-right: 1px solid #ddd; }
 .tablet .mm-split-pane-co#0099CCntent {
   display: block; }
-
- .bar-side-menu {
-   background-color: #0099CC;
- }
- 
- .bar-content {
-   background-color: #0099CC;
- }
- 
- .button.button-positive {
-   border-color: #0099CC;
-   background-color: #0099CC;
-    color: #fff;
- } 
- 
- .item-divider {
-   background-color: #fafafa;
- }
